Update post logic
