# docs/swagger.yaml
@@ -139,12 +139,8 @@ definitions:
     properties:
       description:
         type: string
-      discount_rate:
-        type: number
       lang_id:
         type: string
-      price:
-        type: number
       short_description:
         maxLength: 255
         type: string
@@ -160,8 +156,6 @@ definitions:
         type: array
     required:
     - description
-    - discount_rate
-    - price
     - short_description
     - title
     type: object
@@ -391,12 +385,8 @@ definitions:
     properties:
       description:
         type: string
-      discount_rate:
-        type: number
       lang_id:
         type: string
-      price:
-        type: number
       remove_thumbnail:
         default: false
         type: boolean
@@ -415,8 +405,6 @@ definitions:
         type: array
     required:
     - description
-    - discount_rate
-    - price
     - short_description
     - title
     type: object
@@ -825,16 +813,10 @@ definitions:
         type: string
       description:
         type: string
-      discount_rate:
-        type: number
-      discounted_price:
-        type: number
       id:
         type: string
       lang:
         $ref: '#/definitions/dto.ReferenceObject'
-      price:
-        type: number
       short_description:
         type: string
       thumbnail_url:
@@ -852,14 +834,8 @@ definitions:
     properties:
       created_at:
         type: string
-      discount_rate:
-        type: number
-      discounted_price:
-        type: number
       id:
         type: string
-      price:
-        type: number
       short_description:
         type: string
       thumbnail_url:
