# models/post.go
@@ -14,8 +14,6 @@ type Post struct {
 	Title            string    `gorm:"column:title;type:varchar(255);not null" json:"title"`
 	Description      string    `gorm:"column:description;type:text;not null" json:"description"`
 	ShortDescription string    `gorm:"column:short_description;type:varchar(255);not null" json:"short_description"`
-	Price            float64   `gorm:"column:price;type:numeric(18,2);not null" json:"price"`
-	DiscountRate     float64   `gorm:"column:discount_rate;type:numeric(5,2);not null" json:"discount_rate"`
 	ThumbnailURL     *string   `gorm:"column:deletable;<-:false" json:"thumbnail_url"`
 	Files            []File    `gorm:"many2many:files_to_module;joinForeignKey:ID;joinReferences:FileID" json:"files"`
 	CreatedAt        time.Time `gorm:"column:created_at;not null" json:"created_at"`
